# codespace_practice

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
XRD_graph/: B2ZnBi2O7.html  B2ZnBi2O7_graph.py  Li2.5Zn0.8Ga0.2Sn3O8_Ga_doped_graph_20241017.html  Li2.5Zn0.8Ga0.2Sn3O8_doped_check_graph_20241017.html  Li2ZnSn3O8_Ga_doped_graph.html  Li2ZnSn3O8_doped_graph.html  Li2ZnSn3O8_graph.html  Li2ZnSn3O8_graph.py  Li2ZnSn3O8_nondoped_Ga_doped_graph.html
candidate_material_list/: Al_candidate_material_list.csv  Al_is_stable_candidate_material_list.csv  B_candidate_material_list.csv  B_is_stable_candidate_material_list.csv  Ba_candidate_material_list.csv  C_candidate_material_list.csv  C_is_stable_candidate_material_list.csv  Ca_is_stable_candidate_material_list.csv  K_is_stable_candidate_material_list.csv  Li_candidate_material_list.csv  Li_is_stable_candidate_material_list.csv  Mg_is_stable_candidate_material_list.csv  Ni_candidate_material_list.csv  Ni_is_stable_candidate_material_list.csv  Si_candidate_material_list.csv  Si_is_stable_candidate_material_list.csv  Sr_candidate_material_list.csv  candidate_material_list.csv
candidate_material_list_final/: Al_is_stable_candidate_material_list.csv  B_is_stable_candidate_material_list.csv  C_is_stable_candidate_material_list.csv  Ca_is_stable_candidate_material_list.csv  K_is_stable_candidate_material_list.csv  Li_is_stable_candidate_material_list.csv  Mg_is_stable_candidate_material_list.csv  Ni_is_stable_candidate_material_list.csv  Si_is_stable_candidate_material_list.csv
codespace_test_module/: main.py  (+9 more)
(+5868 files in other folders)
