[tool.poetry]
name = "codespace_test_module"
version = "0.1.0"
description = ""
authors = ["056wagomu <ohayotonkatsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
pytest = "^8.2.1"
pymatgen = "^2024.6.10"
mp-api = "^0.41.2"
ipykernel = "^6.29.4"
pyarrow = "^16.1.0"
chempy = "^0.9.0"
periodictable = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 200